8275638: GraphKit::combine_exception_states fails with "matching stack sizes" assert

Backport-of: b9a477bf19d9f276f6b1da8984eb56d7bd5fc137